// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`qla migration running with --dry-run outputs dry run info 1`] = `
"Would create: /Users/jditson/code/quip-apps/packages/quip-cli/test/fixtures/folders/migrations
Would create: /Users/jditson/code/quip-apps/packages/quip-cli/test/fixtures/folders/migrations/20150614_dry.js
Would add migration:
{
    \\"version_number\\": 50,
    \\"js_file\\": \\"migrations/20150614_dry.js\\"
}
"
`;

exports[`qla migration running with a file name creates a migration with a filesystem friendly name 1`] = `
Object {
  "js_file": "migrations/20150614_add_new_flobs_to_all_the_fleebs.js",
  "version_number": 1,
}
`;

exports[`qla migration running with a file name increments the migration number when adding another 1`] = `
Object {
  "js_file": "migrations/20150614_add_new_flobs_to____all_the_fleebs.js",
  "version_number": 1,
}
`;

exports[`qla migration running with a file name verify manifest 1`] = `
Object {
  "description": "test",
  "id": "no-id",
  "manifest_version": 1,
  "name": "Test",
  "toolbar_color": "blue",
  "toolbar_icon": "poll",
  "version_name": "1.0",
  "version_number": 1,
}
`;

exports[`qla migration running with no arguments creates a migration with today's date 1`] = `
Object {
  "js_file": "migrations/20150614_01.js",
  "version_number": 1,
}
`;

exports[`qla migration running with no arguments creates a migration with today's date 2`] = `
"quip.apps.registerMigration(rootRecord => {
    // Write your migration code here
    return rootRecord;
});
"
`;

exports[`qla migration running with no arguments increments the migration number when adding another 1`] = `
Array [
  Object {
    "js_file": "migrations/20150614_01.js",
    "version_number": 1,
  },
  Object {
    "js_file": "migrations/20150614_02.js",
    "version_number": 1,
  },
]
`;

exports[`qla migration running with no arguments verify manifest 1`] = `
Object {
  "description": "test",
  "id": "no-id",
  "manifest_version": 1,
  "name": "Test",
  "toolbar_color": "blue",
  "toolbar_icon": "poll",
  "version_name": "1.0",
  "version_number": 1,
}
`;

exports[`qla migration specifying a folder (-f) creates a new folder and adds a migration to the specified folder 1`] = `
Object {
  "js_file": "created-folder/20150614_some-name.js",
  "version_number": 1,
}
`;

exports[`qla migration targeting a version (-v) adds the correct version_number 1`] = `
Object {
  "js_file": "migrations/20150614_version.js",
  "version_number": 42,
}
`;

exports[`qla migration targeting a version (-v) verify manifest 1`] = `
Object {
  "description": "test",
  "id": "no-id",
  "manifest_version": 1,
  "name": "Test",
  "toolbar_color": "blue",
  "toolbar_icon": "poll",
  "version_name": "1.0",
  "version_number": 1,
}
`;

exports[`qla migration works when manifest is in a subdir does not fail 1`] = `
Object {
  "js_file": "../migrations/20150614_subdir.js",
  "version_number": 1,
}
`;

exports[`qla migration works when manifest manually specified does not fail 1`] = `
Object {
  "js_file": "../migrations/20150614_01.js",
  "version_number": 1,
}
`;
